--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,21 @@
         android:theme="@style/Theme.CrudSQLite"
         tools:targetApi="31">
         <activity
+            android:name=".ConsultaSpinner"
+            android:exported="false" />
+        <activity
+            android:name=".DetallesArticulos"
+            android:exported="false" />
+        <activity
+            android:name=".ListViewArticulos"
+            android:exported="false" />
+        <activity
+            android:name=".list_view_articulos"
+            android:exported="false" />
+        <activity
+            android:name=".ventana1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
